# cookiecutter-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: INSTALL.md  Makefile  environment.yml  pyproject.toml
{{ cookiecutter.project_slug }}/docs/: conf.py
{{ cookiecutter.repo_name }}/: Makefile  pyproject.toml  requirements.txt  setup.py  test_environment.py
